<resources>
    <string name="app_name">Crypto Compare</string>
    <string name="hint_currency_search">Enter currency</string>
    <string name="menu_item_update">Update</string>
    <string name="menu_item_settings">Settings</string>
    <string name="currency_item_open">Open:</string>
    <string name="currency_item_close">Close:</string>
    <string name="currency_item_details">Details</string>
    <string name="title_activity_preference">Preference</string>

    <string name="apiKey">aa28375976e9cf6637268bd0be9b1b9a5788534c6f2e6a64bcb800d384968aa1</string>
    <string name="apiSite">http://min-api.cryptocompare.com/</string>
    <string name="defaultFSym">USD</string>
    <string name="defaultTSym">RUB</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_btn_display">Display</string>
    <string name="txt_currency_usd">Currency: USD</string>
    <string name="tv_currency_name">Name</string>
    <string name="tv_open_value">Value</string>
    <string name="tv_txt_usd">USD:</string>
    <string name="tv_txt_eur">EUR:</string>
    <string name="tv_txt_rub">RUB:</string>
    <string name="loader_txt_loading">Loading ...</string>
</resources>
