<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCurrency"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/hint_currency_search"
            android:inputType="text"
            android:text="@string/defaultFSym" />
        <Button
            android:id="@+id/displayCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="15dp"
            android:text="@string/txt_btn_display" />

    </LinearLayout>

    <TextView
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/loader_txt_loading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/currencyRecyclerView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </ScrollView>

    <Button
        android:id="@+id/openWebSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="min-api.cryptocompare.com" />

</LinearLayout>