<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/openLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/openValue"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/currency_item_open"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/openValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/closeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openValue"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/openValue"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/currency_item_close"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/closeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/openValue"
        android:layout_marginTop="20dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnCurrencyDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dateValue"
        android:layout_marginTop="52dp"
        android:text="@string/currency_item_details" />


</RelativeLayout>